--- a/stylesheet.css
+++ b/stylesheet.css
@@ -45,17 +45,17 @@ a {
   margin-bottom: 20px;
 }
 
-.signup {
-  background-color: #239b76;
+.docomo {
+  background-color: #ff0000;
 }
 
-.facebook {
-  background-color: #3b5998;
+.au {
+  background-color: #ffffff;
   margin-right: 10px;
 }
 
-.twitter {
-  background-color: #55acee;
+.SoftBank {
+  background-color: #c0c0c0;
 }
 
 .btn {
