--- a/stylesheet.css
+++ b/stylesheet.css
@@ -59,7 +59,7 @@ a {
 
 .btn {
   padding: 8px 24px;
-  color: black;
+  color: white;
   display: inline-block;
   opacity: 0.8;
   border-radius: 4px;
