--- a/stylesheet.css
+++ b/stylesheet.css
@@ -57,6 +57,10 @@ a {
   background-color: #c0c0c0;
 }
 
+.FLETS {
+  background-color: #0000cd;
+}
+
 .btn {
   padding: 8px 24px;
   color: white;
