--- a/stylesheet.css
+++ b/stylesheet.css
@@ -18,7 +18,7 @@ a {
 }
 
 .top-wrapper {
-  padding: 0px 0 100px 0;
+  padding: 0px 0 100px 0;<!-- 高さと横幅の位置指定-->
   background-image: url(top.png);
   background-size: cover;
   color: black;
